Asset cleansing for about image fix
Don't look at this commit...

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,10 +59,6 @@ a {
     font-size: 18px;
   }
 }
-@font-face {
-  font-family: "SecularOne-Regular";
-  src: url(assets/fonts/SecularOne-Regular.ttf);
-}
 
 @font-face {
   font-family: "work-sans";
